data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3180.wast
;; 9. **Test 9: Function Call Inside Try-Catch with Argument Drop**      Description: Develop a function where a `call` instruction is placed inside a `try` block, and an exception leads to a `catch` block that drops arguments from the stack. Verify how each implementation handles arguments in the presence of exceptions.      Constraint: Simulate exceptions that lead to stack mutations.      Relation to Branch Target Resolution: Exception handling affects control flow branches and stack state, testing resilience to label resolution under exceptional circumstances.

(assert_invalid
  (module
    (func $calledFunc (param i32))
    (type $sig (func (param i32)))
    (table funcref (elem $calledFunc))
    (func $tryCatchFunc (result i32)
      (local i32)
      (try (result i32)
        (do
          (i32.const 42)
          (call_indirect (type $sig) (i32.const 0) (i32.const 1))
          (return)
        )
        (catch_all
          (drop)
          (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)